--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <textarea id="comments" name="comments" rows="5" cols="33">
         Please share your feedback
         </textarea>
+        <label for="currentDate">Current Date:</label>
+
+<input type="date" id="currentDate" name="Current Date" value="2023-10-01" min="2023-01-01" max="2023-12-31" />
+
 
 
         </fieldset>
