Add final Divs for spacing

--- a/index.html
+++ b/index.html
@@ -42,18 +42,17 @@
           <input type="radio" id="javascript" name="programming language" value="javascript" />
           <label for="javascript">JavaScript</label>
         </div>
-        
+        <div>
         <label for="comments">Comments:</label>
-
+        </div>
         <textarea id="comments" name="comments" rows="5" cols="33">
         Please share your feedback
         </textarea>
+        <div>
         <label for="currentDate">Current Date:</label>
 
 <input type="date" id="currentDate" name="Current Date" value="2023-10-01" min="2023-01-01" max="2023-12-31" />
-
-
-
+      </div>
         </fieldset>
       </form>
     
